switcher-ac/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switcher-ac
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: switcher-ac
  template:
    metadata:
      labels:
        app: switcher-ac
    spec:
      dnsPolicy: Default
      containers:
        - name: switcher-ac
          image: trackerforce/switcher-ac:latest
          ports:
            - containerPort: 8070
              protocol: TCP
          resources: 
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
