switcher-ac/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: switcher-ac
  labels:
    app: switcher-ac
spec:
  selector:
    app: switcher-ac
  ports:
  - protocol: TCP
    port: 8070
    targetPort: 8070
